app/javascript/pages/inviteToApply/invite-to-apply.module.scss
.listingCard {
  @media (max-width: theme("screens.sm")) {
    border: none;
    border-radius: 0;
    margin-bottom: 0;
  }
  margin-bottom: var(--seeds-spacer-label);
  .listingHeader {
    text-align: center;
    padding: var(--seeds-spacer-header);
    background: var(--seeds-color-primary);

    .listingHeading {
      color: var(--seeds-color-white);
    }
  }

  .listingSection {
    padding: var(--seeds-spacer-text) !important;
    text-align: center;
    @media (max-width: theme("screens.sm")) {
      background: var(--seeds-color-primary-lighter);
    }
  }
}

.responseCard {
  @media (max-width: theme("screens.sm")) {
    border: none;
  }

  .responseHeader {
    padding: var(--seeds-spacer-container);
    text-align: center;
    @media (max-width: theme("screens.sm")) {
      text-align: left;
      padding: var(--seeds-spacer-section);
    }
  }

  .responseSubtitle {
    margin-top: var(--seeds-spacer-label);
  }

  .responseSection {
    display: flex;
    flex-direction: column;
    padding: var(--seeds-spacer-section);
    background: var(--seeds-color-primary-lighter);
    gap: var(--seeds-spacer-text);
  }
}

.submitYourInfo {
  display: flex;
  flex-direction: column;
  gap: var(--seeds-spacer-content);

  a:not(.responseIcon) {
    text-decoration: underline;
  }

  ul {
    margin-left: var(--seeds-spacer-label);
  }

  .submitYourInfoPage {
    display: flex;
    flex-direction: row;
    @media (max-width: theme("screens.sm")) {
      flex-direction: column;
    }
  }
  .submitYourInfoMain {
    gap: var(--seeds-spacer-text);
    max-width: var(--seeds-screen-lg);
    padding-left: 26rem;
    margin: var(--seeds-spacer-section);
    @media (max-width: theme("screens.sm")) {
      width: 100%;
      padding: 0 var(--seeds-spacer-section);
      margin: 0;
    }
  }
  .submitYourInfoSidebar {
    display: flex;
    flex-direction: column;
    gap: var(--seeds-spacer-text);
    line-height: var(--seeds-line-height-relaxed);
    max-width: var(--seeds-width-lg);
    h3 {
      margin: var(--seeds-spacer-text) 0;
    }
    @media (max-width: theme("screens.sm")) {
      width: 100%;
      padding: 0 var(--seeds-spacer-section);
    }
    padding: var(--seeds-spacer-section) var(--seeds-s24) 0 var(--seeds-spacer-section);
    border-left: 1px solid var(--seeds-color-gray-450);
  }

  .submitYourInfoSection {
    padding-bottom: var(--seeds-spacer-header);
    @media (max-width: theme("screens.sm")) {
      padding-bottom: 0;
    }
    > * {
      margin: var(--seeds-spacer-text) 0;
    }
    h2 {
      padding: var(--seeds-spacer-header) 0;
      @media (max-width: theme("screens.sm")) {
        padding-top: var(--seeds-spacer-label);
      }
    }
    h3 {
      padding-bottom: var(--seeds-spacer-text);
      margin-top: var(--seeds-spacer-content);
      @media (max-width: theme("screens.sm")) {
        padding-bottom: 0;
      }
    }
    h4 {
      padding-bottom: var(--seeds-spacer-text);
      @media (max-width: theme("screens.sm")) {
        padding-bottom: 0;
      }
    }
    .actionButton {
      margin-top: var(--seeds-spacer-section);
    }
    img {
      margin-top: var(--seeds-spacer-section);
      margin-bottom: var(--seeds-spacer-header);
    }
    ul:not(.submitYourInfoList) {
      list-style-type: disc;
      margin-left: var(--seeds-spacer-section);
    }
    ol {
      list-style-type: decimal;
      margin-left: var(--seeds-spacer-section);
      padding-bottom: var(--seeds-spacer-header);
    }
    ul.iconList {
      margin-left: 0;
      li {
        list-style-type: none;
        background-image: url("/images/icon-document.svg");
        background-repeat: no-repeat;
        padding: var(--seeds-spacer-text) 0 0 var(--seeds-spacer-section);
        background-position: left var(--seeds-spacer-text);
      }
    }
    .messageBanner {
      margin-bottom: var(--seeds-spacer-label);
      line-height: var(--seeds-line-height-relaxed);
    }
    .accordionContent {
      padding: var(--seeds-spacer-content);
      border: 2px solid var(--seeds-color-gray-400);
      border-top: none;
      border-radius: 0 0 var(--seeds-rounded-lg) var(--seeds-rounded-lg);
    }
    .accordionBar {
      display: block;
      text-align: left;
    }
  }

  .infoSubSection {
    padding-top: var(--seeds-spacer-content);
  }

  .whatToDoList {
    line-height: var(--seeds-line-height-relaxed);
    h2 {
      padding-bottom: var(--seeds-spacer-section);
    }
    h3 {
      padding-bottom: var(--seeds-spacer-label);
    }
    h4 {
      padding-bottom: var(--seeds-spacer-text);
    }
    button {
      margin: var(--seeds-spacer-header) 0;
    }
    .loadingOverlay {
      --loading-state-height: none;
      padding: var(--seeds-s1) 0;
      width: var(--seeds-width-xs);

      :global {
        .loading-state-spinner {
          padding: var(--seeds-s3);
        }
      }
    }
  }

  .submitYourInfoIcons {
    display: flex;
    flex-direction: column;
    gap: var(--seeds-spacer-text);
    margin-top: var(--seeds-spacer-text);
  }

  .submitYourInfoBox {
    background-color: var(--seeds-color-gray-200);
    padding: var(--seeds-spacer-content);
    margin-top: var(--seeds-spacer-section);
  }

  .submitYourInfoList {
    li {
      all: unset;
      display: list-item;
      list-style-type: disc;
      margin-left: var(--seeds-s8);
    }
  }

  .numberedList li:before {
    color: var(--seeds-color-black);
  }
}

.responseIcon {
  display: flex;
  gap: var(--seeds-spacer-text);
}

.headerButton {
  font-weight: normal;
}

